# agentic-ai-storyteller

./: .gitignore  QNN_setup.md  README.md  Running_Models_on_Genie.md  Running_Models_on_SNPE.md  device_b_config.json  status_mesh.sh  stop_mesh.sh
networking/: All_Scripts.md  BatteryHelper.java  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  P2P_ORCHESTRATOR_ARCHITECTURE.md  QUICK_START.sh  TESTING_GUIDE.md  auto_test_agentic_storyteller.sh  build_agent.sh  run_orchestrator.py  run_orchestrator.sh  send_test_image.py  setup_laptop_control.sh  setup_mesh_network.sh  test_checkpoint2.py  working.txt
networking/hubspoke/: IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_CHECKPOINT2.md  QUICK_START.md  run_network.sh  send_image_from_device.py  send_test_image.py
networking/include/: device_client.hpp  message.hpp  utils.hpp
networking/p2p/: check_mesh_status.sh  send_message.sh  send_slm.sh  setup_laptop_control.sh  setup_mesh_direct.sh  start_mesh_A.sh  start_mesh_B.sh  start_mesh_C.sh  status.sh
networking/src/: DeviceClient.cpp  DeviceClient.h  device_client.cpp  main.cpp  orchestrator.py  orchestrator_p2p.py  utils.cpp
networking/v2p/: ARCHITECTURE_LINUCB.md  CHECKPOINT2_STATUS.md  CHECKPOINT2_SUMMARY.md  CHECKPOINT2_TEST_RESULTS.md  CHECKPOINT3_FINAL_IMPLEMENTATION.md  CHECKPOINT3_IMPLEMENTATION.md  COMPLETE_SETUP_GUIDE.md  MONITORING_GUIDE.md  ORCHESTRATOR_GUIDE.md  ORCHESTRATOR_README.md  QUICK_START_CHECKPOINT2.sh  README.md  START_HERE.sh  TESTING_INSTRUCTIONS.md  config_template.json  deploy_to_devices.sh  device_a_config.json  device_b_config.json  host_harness.py  (+18 more)
(+174 files in other folders)
